--- a/mypy.ini
+++ b/mypy.ini
@@ -8,6 +8,16 @@ warn_unused_ignores = True
 no_implicit_optional = True
 warn_no_return = True
 
+[mypy-aiosql.queries]
+disallow_any_generics = True
+disallow_incomplete_defs = True
+disallow_subclassing_any = True
+disallow_untyped_calls = True
+disallow_untyped_decorators = True
+disallow_untyped_defs = True
+no_implicit_reexport = True
+warn_return_any = True
+
 [mypy-aiosql.query_loader]
 disallow_any_generics = True
 disallow_incomplete_defs = True
