Enable some strict flags of mypy
We aim at having 'mypy --strict' pass on aiosql code base. This first
step enables some flags that are optional in non-strict mode but do not
produce additional errors at the moment. This is to prevent regressions.

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,12 @@
 [mypy]
+allow_untyped_globals = False
+strict_equality = True
+strict_optional = True
+warn_unreachable = True
+warn_unused_configs = True
+warn_unused_ignores = True
+no_implicit_optional = True
+warn_no_return = True
 
 [mypy-pytest.*]
 ignore_missing_imports = True
