--- a/mypy.ini
+++ b/mypy.ini
@@ -8,6 +8,10 @@ warn_unused_ignores = True
 no_implicit_optional = True
 warn_no_return = True
 
+[mypy-aiosql.aioctxlib]
+disallow_untyped_calls = False
+disallow_untyped_defs = False
+
 [mypy-aiosql.aiosql]
 disallow_any_generics = True
 disallow_incomplete_defs = True
